--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,16 @@
 version: "3.9"
 
 services:
-  # 🚀 API principal NestJS
   api:
     build: .
-    container_name: cano-distri-backend-api
     restart: unless-stopped
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@cano-db:5432/${POSTGRES_DB}
+      DB_HOST: cano-db
+      DB_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-      DB_HOST: db
-      DB_PORT: 5432
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRATION_TIME: ${JWT_EXPIRATION_TIME}
       JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
@@ -25,20 +20,14 @@ services:
       NODE_ENV: production
       TZ: America/Bogota
       TYPEORM_SYNC: ${TYPEORM_SYNC}
-    expose:
-      - "3000"
     networks:
       - dokploy-network
-      - internal
     labels:
       - traefik.enable=true
-      # Router HTTPS
       - traefik.http.routers.cano-api.rule=Host(`api-cano-distri.andresvps.cloud`)
       - traefik.http.routers.cano-api.entrypoints=websecure
       - traefik.http.routers.cano-api.tls.certresolver=letsencrypt
-      # Servicio interno
       - traefik.http.services.cano-api.loadbalancer.server.port=3000
-      # Redirección HTTP → HTTPS
       - traefik.http.routers.cano-api-http.rule=Host(`api-cano-distri.andresvps.cloud`)
       - traefik.http.routers.cano-api-http.entrypoints=web
       - traefik.http.routers.cano-api-http.middlewares=redirect-to-https
@@ -50,53 +39,6 @@ services:
       retries: 3
       start_period: 40s
 
-  # 🧱 Base de datos PostgreSQL (mantiene tus datos)
-  db:
-    image: postgres:15-alpine
-    restart: unless-stopped
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      TZ: America/Bogota
-    volumes:
-      - cano-distri-backend_db_data:/var/lib/postgresql/data
-      - ./backups:/backups
-    networks:
-      - internal
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-
-  # 💾 Servicio de backup
-  backup:
-    image: postgres:15-alpine
-    container_name: cano-distri-backend-backup
-    restart: no
-    depends_on:
-      - db
-    command: sh /scripts/backup.sh
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      TZ: America/Bogota
-    volumes:
-      - ./backups:/backups
-      - ./scripts:/scripts:ro
-    networks:
-      - internal
-
-volumes:
-  cano-distri-backend_db_data:
-    external: true
-
 networks:
   dokploy-network:
-    external: true
-  internal:
-    driver: bridge
     external: true
